infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: satoshi.davidliu.co
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: satoshi-auth-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: satoshi-client-srv
              servicePort: 3000
